--- a/login.css
+++ b/login.css
@@ -1,9 +1,9 @@
-/* Made with love by Mutiullah Samim*/
+
 
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 html,body{
-background-image: url('http://getwallpapers.com/wallpaper/small-retina/c/c/4/1467648-gorgerous-computer-tech-wallpaper-1920x1080-for-windows-7.jpg');
+background-image: ;
 background-size: cover;
 background-repeat: no-repeat;
 height: 100%;
@@ -16,10 +16,12 @@ align-content: center;
 }
 
 .card{
+    padding:6px;
 height: 370px;
 margin-top: auto;
+border-radius: 10px;
 margin-bottom: auto;
-width: 400px;
+width: 420px;
 background-color: rgba(0,0,0,0.5) !important;
 }
 
@@ -56,18 +58,6 @@ input:focus{
 outline: 0 0 0 0  !important;
 box-shadow: 0 0 0 0 !important;
 
-}
-
-.remember{
-color: white;
-}
-
-.remember input
-{
-width: 20px;
-height: 20px;
-margin-left: 15px;
-margin-right: 5px;
 }
 
 .login_btn{
